--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
 				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
-					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verificación si es necesaria realizo la implementación de técnicas de validación cruzada, 
+					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verificación de ser necesaria realizar la implementación de técnicas de validación cruzada, 
 					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como pueden ser datos no legibles o No estructurados me apoyo con
 					el etiquetado para poder almacenarlos eficientemente.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
@@ -192,8 +192,8 @@
 				<i class='bx bxs-notepad'></i>
 				<h3>Datos Estructurados</h3>
 				<p>Ya sea que los datos provengan de fuentes como repositorios centralizados o externos este tipo de datos los trabajo con RDD, a través de la distribución 
-					computacional, ya que me permiten trabajr de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas para grandes capacidades 
-					de almacenamiento. Me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con <em>Spark para 
+					computacional, ya que me permiten trabajar de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas para grandes capacidades 
+					de almacenamiento. Particularmente me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con <em>Spark para 
 					Scala o PySpark para Python</em>, dejando los datos listos para trabajar con <b>Apache Hadoop</b> y su posterior conexión vía HDFS.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
@@ -214,7 +214,7 @@
 				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los dataflow o flujos de datos y los soporto con herramientas de inteligencia 
 					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. El flujo de datos de esta herramienta 
 					gráfica, con el almacén lo gestiono con <b>DirectQuery</b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura 
-					de <em>Business Intelligence</em> y <b>PowerBI</b> me van a permitir crear las dependencias para el tipo de análisis, su sincronozación y orquestación desde las fuentes.</p>
+					de <em>Business Intelligence</em> y <b>PowerBI</b> me van a permitir crear las dependencias para el tipo de análisis, su sincronización y orquestación desde las fuentes.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		</div>
