--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 			<!--Medios sociales-->
 			<div class = "social-media">
 				<a href = "https://www.linkedin.com/in/reduardoj/" title = "LinkedIn" target="_blank"><img width="25px" src="https://github.com/user-attachments/assets/e85d5713-88ba-49d9-9be3-6d744fb72a4f" /></a>
-				<a href = "https://www.instagram.com/reduardoj/?hl=es" title = "Instagram" target="_blank><img width="25px" src="https://github.com/user-attachments/assets/63b4d7ea-1b25-4e53-a25e-04ac01a5341f" /></a>
-				<a href = "https://github.com/Edriv-DS" title = "GitHub" target="_blank><img width="25px" src="https://github.com/user-attachments/assets/e2305945-4a24-47d9-af8c-4991769ab30b" /></a>
-				<a href = "https://www.twitter.com/EduardoR1105" title = "X" target="_blank><img width="25px" src="https://github.com/user-attachments/assets/6a73396a-97c9-416b-8e07-79c67bc35a04" /></a>
+				<a href = "https://www.instagram.com/reduardoj/?hl=es" title = "Instagram" target="_blank"><img width="25px" src="https://github.com/user-attachments/assets/63b4d7ea-1b25-4e53-a25e-04ac01a5341f" /></a>
+				<a href = "https://github.com/Edriv-DS" title = "GitHub" target="_blank"><img width="25px" src="https://github.com/user-attachments/assets/e2305945-4a24-47d9-af8c-4991769ab30b" /></a>
+				<a href = "https://www.twitter.com/EduardoR1105" title = "X" target="_blank"><img width="25px" src="https://github.com/user-attachments/assets/6a73396a-97c9-416b-8e07-79c67bc35a04" /></a>
 			</div>
 			<!--<a href = "#" class = "btn">Descarga CV</a> puede ser un botón de descarga--> 
 		</div>
