--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 			<div>
 				<h3>Dirección de e-mail ✉️</h3>
 				<p>reduardoj@gmail.com</p>
+				<p>reduardoj@hotmail.com</p>
 			</div>
 		</div>
 		<br>
