--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	</section>
 	
 	<section class = "contact" id = "contact">
-		<h2 class = "heading">¿Hablamos...?</h2>
+		<h2 class = "heading"><span>¿Hablamos...?</span></h2>
 		
 		<!--<div class = "contact-container">-->
 		
