--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<!--<a href = "#" class = "btn">Descarga CV</a> puede ser un botón de descarga--> 
 		</div>
 		<div class = "home-img">
-			<img src = "images/img2.png" alt = "">
+			<img src = "images/img1.jpeg" alt = "">
 		</div>
 	</section>
 	
@@ -62,7 +62,7 @@
 	
 	<section class = "about" id = "about">
 		<div class = "about-img">
-			<img src = "images/img1.png" alt = "">
+			<img src = "images/img2.png" alt = "">
 		</div>
 		
 		<div class = "about-content">
@@ -242,7 +242,7 @@
 		</div>
 		<br>
 		<div class = "contact-img">
-			<img src = "images/Tech.jpg" alt = "">
+			<img src = "images/img3.jpg" alt = "">
 		</div>
 	</section>
 	
