--- a/index.html
+++ b/index.html
@@ -160,61 +160,42 @@
 			<div class ="skills-box">
 				<i class='bx bxs-data' ></i>
 				<h3>Bases de Datos</h3>
-				<p>Facilito el procesamiento de las bases de datos al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, 
-					la eliminación de valores atípicos y con la transformación de variables, beneficiando las estructuras que ofrecen los repositorios de datos. Además, a través de herramientas diseñadas
-					realizo la conexión directa e indirecta a las bases de datos, permitiendo <em>pipelines o canalizaciones</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos 
-					ETL y su posterior entrenamiento.</p>
+				<p>Facilito el procesamiento y la gestión de las bases de datos relacionales al permitir realizar consultas complejas que extraigan, filtren y agreguen información de forma eficiente. Opero con la normalización, la eliminación de valores atípicos y con la transformación de variables, beneficiando las estructuras que ofrecen los repositorios. Además, a través de herramientas diseñadas, realizo la conexión directa e indirecta a las <b>BBDD</b>, permitiendo <em>pipelines o canalizaciones</em> de datos automatizados que optimizan el flujo de trabajo entre los procesos ETL y su posterior entrenamiento. Utilizo sqlite3 para bases ligeras y MySQL para bases robustas.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		
 			<div class ="skills-box">
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
-				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, 
-					facilitando la comparación de resultados y la realización de experimentos reproducibles, con la verificación de ser necesaria realizar la implementación de técnicas de validación cruzada, 
-					que puedan asegurar la generación del modelo sin llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como pueden ser datos no legibles o No estructurados me apoyo con
-					el etiquetado para poder almacenarlos eficientemente.</p>
+				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, facilitando la comprensión, comparación de resultados y la realización de experimentos reproducibles, con la verificación de ser necesaria su gestión, implemento técnicas de validación cruzada, que puedan asegurar la generación del modelo con la cautela de no llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como me mencioné anteriormente tales como datos no legibles o no estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxl-codepen'></i>
 				<h3>Deep Learning</h3>
-				<p>Utlizo como herramienta el lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para
-					las tareas de preparación de datos me apoyo con librerías como <b>Pandas y NumPy</b> y para el preprocesamiento va a depender 
-					de lo que se necesite analizar ya sea procesadores de textos o imágenes. El framework que utilizo para dichas tareas son <b>Tensorflow y su API Keras</b>. Para garantizar patrones realizo la
-					validación cruzada y división en datos de prueba y entrenamiento, practicando la monitorización, a través de <b>curvas ROC, MSE o error 
-					cuadrático medio, matrices de confusión y precisión</b>, siempre y cuando el problema así lo solicite.</p>
+				<p>Utlizo como herramienta el procesamiento de lenguaje natural o <b>NPL</b> para elaborar prototipos que puedan ser sacados a producción. Para las tareas de preparación de datos me apoyo con las librerías <b>Pandas y NumPy</b> y para el pre-procesamiento dependerá de lo que se necesite analizar ya sea procesadores de textos o imágenes. Los frameworks que utilizo son <b>Tensorflow y su API Keras</b>. Para garantizar patrones realizo la validación cruzada, división en datos de prueba y entrenamiento, monitorizando, a través de <b>curvas ROC, errores cuadráticos o matrices de confusión y precisión</b>, según la necesidad.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-notepad'></i>
 				<h3>Datos Estructurados</h3>
-				<p>Ya sea que los datos provengan de fuentes como repositorios centralizados o externos este tipo de datos los trabajo con RDD, a través de la distribución 
-					computacional, ya que me permiten trabajar de manera rápida y eficiente al poder escalar repositorios a través de sus diferentes etapas para grandes capacidades 
-					de almacenamiento. Particularmente me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Este tipo de sistemas los trabajo con <em>Spark para 
-					Scala o PySpark para Python</em>, dejando los datos listos para trabajar con <b>Apache Hadoop</b> y su posterior conexión vía HDFS.</p>
+				<p>Ya sea que los datos provengan de repositorios centralizados o externos este tipo de datos los trabajo con RDD, a través de la distribución computacional, ya que me permiten trabajar de manera rápida y eficiente al poder escalar los repositorios en sus diferentes etapas para grandes capacidades de almacenamiento. Particularmente me baso en cuadernos Jupyter y los principales Kernels para ciencia y procesamiento de datos. Estos sistemas los trabajo con <em>Spark para Scala o PySpark para Python</em>, dejando los datos listos para trabajar con <b>Apache Hadoop</b> y su posterior conexión vía HDFS.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-cloud'></i>
 				<h3>Data Cloud</h3>
-				<p>La aplicación de gestiones cloud lo aporto de conocimientos desde una arquitectura con <em>Azure</em>, pudiendo gestionar suscripciones, controles de acceso, gobernanza y
-				        conectividad con máquinas virtuales monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras 
-					en almacenes, al estar cubierta por las bases esenciales de un <b>Arquitecto de Bases de Datos</b>. La modularidad de arquitecturas de bases de datos con Azure los fundamento 
-					bajo conocimientos sólidos, prácticos y con licensias para ser desplejados en desarrollo.</p>
+				<p>La gestión cloud lo aporto de conocimientos directos con arquitectura <em>Azure</em>, lo que me permite gestionar suscripciones, controles de acceso, gobernanza y conectividad con máquinas virtuales, monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras en almacenes, al estar cubierta por las bases esenciales de un <b>Arquitecto de Bases de Datos</b>. La modularidad de las bases de datos con Azure poseen un <b>gap</b> de los módulos <b>AZ-900, AZ-104, AZ-303 y AZ-304</b> bajo conocimientos sólidos, prácticos y con licensia para ser desplejado en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
 			<div class ="skills-box">
 				<i class='bx bxs-bar-chart-alt-2'></i>
 				<h3>Business Intelligence</h3>
-				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los dataflow o flujos de datos y los soporto con herramientas de inteligencia 
-					de negocios. Partiicipo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas calculadas. El flujo de datos de esta herramienta 
-					gráfica, con el almacén lo gestiono con <b>DirectQuery</b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura 
-					de <em>Business Intelligence</em> y <b>PowerBI</b> me van a permitir crear las dependencias para el tipo de análisis, su sincronización y orquestación desde las fuentes.</p>
+				<p>La creación de visualizaciones y análisis las realizo a través de expresiones de los dataflow y los soporto con herramientas de inteligencia de negocios. Participo en análisis complejos con DAX y sus funciones categóricas para medidas y columnas. El flujo de datos de esta herramienta gráfica, con el almacén lo gestiono con <b>DirectQuery</b> a través de conexión de importaciones robustas por lotes. La creación de estas conexiones con la arquitectura de <em>Business Intelligence y PowerBI</em> me van a permitir crear las dependencias para el tipo de análisis, su sincronización y orquestación desde las fuentes.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 		</div>
