--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 	</section>
 
 	<section class = "contact" id = "contact">
-		<h2 class = "heading"><span>¿Hablamos...?</span></h2>
+		<h2 class = "heading">Me puedes <span>contactar en:</span></h2>
 		
 		<!--<div class = "contact-container">-->
 		
