--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <section class = "formulario" id = "formulario">
 		<h2 class = "heading">Me puedes <span>escribir en:</span></h2>
 		
-		<form id = "form" action="https://github.com/Edriv-DS/curriculum/blob/main/app.py" method="post">
+		<form id = "form" action="app.py" method="post">
 			<div class = "input-box">
 				<input type = "text" id = "nombre" name = "nombre" placeholder = "*Nombre Completo" required>
 				<input type = "email" id = "email" name = "email" placeholder = "*Dirección de e-mail" required>
