--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
 
         <section class = "formulario" id = "formulario">
 		<h2 class = "heading">Me puedes <span>escribir en:</span></h2>
-		
+
+		<section class = "watermark-section">
 		<form id = "form" action="https://ngrok.com/r/iep/submit" method="post">
 			<div class = "input-box">
 				<input type = "text" id = "nombre" name = "nombre" placeholder = "*Nombre Completo" required>
@@ -225,6 +226,7 @@
 			<!--<input type = "submit" onclick = "enviarForm(event)" id = "enviar" value = "Enviar" class = "btn">-->
 			
 		</form>
+		</section>
 		<div class="warning" id="warningMessage">
 			<p>*Requerido.</p>
 			<p>**Asegúrese de ingresar información válida. No será compartida.</p>
