--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<div class ="skills-box">
 				<i class='bx bxl-python' ></i>
 				<h3>Machine Learning</h3>
-				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, facilitando la comprensión, comparación de resultados y la realización de experimentos reproducibles, con la verificación de ser necesaria su gestión, implemento técnicas de validación cruzada, que puedan asegurar la generación del modelo con la cautela de no llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como me mencioné anteriormente tales como datos no legibles o no estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente.</p>
+				<p>Elaboro modelos de Machine Learning basados en el entrenamiento, evaluando y validando los resultados, lo que me permite almacenarlos en conjuntos de entrenamiento, validación y prueba, facilitando la comprensión, comparación de resultados y la realización de experimentos reproducibles, con la verificación de ser necesaria su gestión, implemento técnicas de validación cruzada, que puedan asegurar la generación del modelo con la cautela de no llegar al sobreajuste u <b>overfitting</b>. Para modelos complejos como mencioné anteriormente tales como datos no legibles o no estructurados me apoyo con el etiquetado para poder almacenarlos eficientemente.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
@@ -191,7 +191,7 @@
 			<div class ="skills-box">
 				<i class='bx bxs-cloud'></i>
 				<h3>Data Cloud</h3>
-				<p>La gestión cloud lo aporto de conocimientos directos con arquitectura <em>Azure</em>, lo que me permite gestionar suscripciones, controles de acceso, gobernanza y conectividad con máquinas virtuales, monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras en almacenes, al estar cubierta por las bases esenciales de un <b>Arquitecto de Bases de Datos</b>. La modularidad de las bases de datos con Azure poseen un <b>gap</b> de los módulos <b>AZ-900, AZ-104, AZ-303 y AZ-304</b> bajo conocimientos sólidos, prácticos y con licensia para ser desplejado en desarrollo.</p>
+				<p>La gestión cloud lo aporto de conocimientos directos con arquitectura <em>Azure</em>, lo que me permite gestionar suscripciones, controles de acceso, gobernanza y conectividad con máquinas virtuales, monitorizando tráfico, redes y almacenes. Mis conocimientos con Azure son fundamentales para soportar arquitecturas e infraestructuras en almacenes, al estar cubierta por las bases esenciales de un <b>Arquitecto de Bases de Datos</b>. La modularidad de las bases de datos con Azure poseen un <b>gap</b> de los módulos <b>AZ-900, AZ-104, AZ-303 y AZ-304</b> bajo conocimientos sólidos, prácticos y con licensia para ser desplegado en desarrollo.</p>
 				<!--<a href = "#" class = "btn">Leer Más</a>-->
 			</div>
 			
