--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 	<header class = "header">
-		<img src = "images/logo.svg" alt = "">
+		<!-- <img src = "images/logo.svg" alt = ""> -->
 		<a href = "#" class = "logo">Portfolio</a>
 		
 		<i class='bx bx-menu' id = "menu-icon"></i>
